@@ -620,21 +620,7 @@
 #      error CONFIG_BOOT_SDRAM_DATA not suupported in this configuration
 #    endif
 
-#  elif defined(CONFIG_SAMA5_BOOT_SDRAM) && defined(CONFIG_ARCH_LOWVECTORS)
-
-  /* In this case, vectors must lie in ISRAM, followed by the page table,*/
-
-#    define PGTABLE_BASE_PADDR    (SAM_ISRAM0_PADDR + 0x00004000)
-#    ifndef CONFIG_PAGING
-#      define PGTABLE_BASE_VADDR  (SAM_ISRAM0_VADDR + 0x00004000)
-#    endif
-#    define PGTABLE_IN_LOWSRAM    1
-
-#    ifdef CONFIG_BOOT_SDRAM_DATA
-#      error CONFIG_BOOT_SDRAM_DATA not suupported in this configuration
-#    endif
-
-#  else /* CONFIG_SAMA5_BOOT_SDRAM && CONFIG_ARCH_LOWVECTORS */
+#  else /* CONFIG_SAMA5_BOOT_ISRAM && CONFIG_ARCH_LOWVECTORS */
 
   /* Otherwise, the vectors lie at another location (perhaps in NOR FLASH, perhaps
    * elsewhere in internal SRAM).  The page table will then be positioned at
